--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -114,15 +114,17 @@ function createClicked(args,dialogName){
 					<p:panelGrid id="panelGrid" columns="2">
 
 						<p:outputLabel for="tfName" value="Name:" />
-						<p:inputText autocomplete="off" id="tfName" value="#{userController.user.name}" validatorMessage="Name can only contain alphabets">
-							<f:validateRegex pattern="[a-zA-Z]*" />
-							
+						<p:inputText autocomplete="off" id="tfName"
+							value="#{userController.user.name}"
+							validatorMessage="Name can only contain alphabets">
+							<f:validateRegex pattern="[a-zA-Z]+(\s)*[a-zA-Z]*" />
+
 							<!-- <f:ajax render="result" /> -->
 						</p:inputText>
 
 						<p:outputLabel for="tfUsername" value="UserName:" />
-						<p:inputText autocomplete="off" id="tfUsername" value="#{userController.tmpUserName}"
-							required="true">
+						<p:inputText autocomplete="off" id="tfUsername"
+							value="#{userController.tmpUserName}" required="true">
 							<!-- <f:ajax render="result" /> -->
 						</p:inputText>
 
@@ -133,15 +135,15 @@ function createClicked(args,dialogName){
 						</p:inputText>
 
 						<p:outputLabel for="tfEmail" value="Email:" />
-						<p:inputText autocomplete="off" id="tfEmail" value="#{userController.tmpEmail}">
+						<p:inputText autocomplete="off" id="tfEmail"
+							value="#{userController.tmpEmail}">
 							<!-- <f:ajax render="result" /> -->
 						</p:inputText>
 
 						<p:outputLabel for="roleList" value="Select Role:" />
 						<p:selectOneMenu id="roleList"
 							value="#{userController.user.roleName}" var="t"
-							style="width:160px"
-							required="true">
+							style="width:160px" required="true">
 							<f:selectItem itemLabel="Select"
 								itemValue="#{userController.user.roleName}" />
 							<f:selectItems value="#{userController.listRoles}" var="role"
@@ -194,10 +196,9 @@ function createClicked(args,dialogName){
 							</p:selectCheckboxMenu>
 						</h:panelGroup>
 
-						<h:panelGrid id="gridPermission" cellpadding="8"
-							>
+						<h:panelGrid id="gridPermission" cellpadding="8">
 
-							<h:panelGrid columns="2"  cellpadding="8"
+							<h:panelGrid columns="2" cellpadding="8"
 								rendered="#{userController.shouldshowPermission}">
 								<h:outputText value="Can Add Provider: " />
 								<p:selectBooleanCheckbox
@@ -230,20 +231,19 @@ function createClicked(args,dialogName){
 					<br />
 					<p:commandButton id="btnSave" value="Save"
 						actionListener="#{userController.saveButtonClicked}"
-						widgetVar="btnSave" update=":userTable,msgs"
-						validateClient="true"
-						 process="@this,userForm"
-						 />
+						widgetVar="btnSave" update=":userTable,msgs" validateClient="true"
+						process="@this,userForm" />
 					<!-- onclick="PF('block').show()" , ajax="false , ,:userDialog" -->
-				
-				<p:blockUI trigger="userForm:btnSave" block="userDialog" widgetVar="block">
+
+					<p:blockUI trigger="userForm:btnSave" block="userDialog"
+						widgetVar="block">
             LOADING<br />
-				<p:graphicImage value="/Images/loading.gif" width="75" height="75" />
-			</p:blockUI>
+						<p:graphicImage value="/Images/loading.gif" width="75" height="75" />
+					</p:blockUI>
 				</h:form>
 			</p:dialog>
 
-			
+
 			<script>
 		function myStyle(){
 			//$('#userDialog').css('position','absolute');
@@ -253,13 +253,15 @@ function createClicked(args,dialogName){
 #userDialog {
 	position: absolute !important;
 }
-#userForm\:btnSave{
-margin: 0px 36% !important;
-width: 25%;
+
+#userForm\:btnSave {
+	margin: 0px 36% !important;
+	width: 25%;
 }
+
 td {
-    color: #4F4F4F;
-    font-size: 0.875em;
+	color: #4F4F4F;
+	font-size: 0.875em;
 }
 </style>
 		</ui:define>
