--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -4,7 +4,12 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-<h:head></h:head>
+<h:head>
+<f:metadata>
+		<f:viewAction actionListener="${userController.onLoad()}" />
+	</f:metadata>
+
+</h:head>
 
 
 <h:body>
