--- a/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
+++ b/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
@@ -63,7 +63,13 @@
 								<!-- <p:confirm header="Confirmation" message="Are you sure?"
 									icon="ui-icon-alert" /> -->
 							</p:commandButton>
-
+							<p:confirmDialog global="true" showEffect="fade"
+								hideEffect="fade">
+								<p:commandButton value="Yes" type="button"
+									styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+								<p:commandButton value="No" type="button"
+									styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+							</p:confirmDialog>
 						</p:column>
 
 					</p:dataTable>
