--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -148,9 +148,9 @@
 									var="practice" itemLabel="#{practice.name}"
 									itemValue="#{practice}" />
 
-								<p:column>
+								<!-- <p:column>
 									<h:outputText value="#{t.name}" />
-								</p:column>
+								</p:column> -->
 
 							</p:selectCheckboxMenu>
 
