Etity change fix

--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -113,7 +113,9 @@
 							value="#{practiseController.entityId}" panelStyle="width:180px"
 							effect="fade" style="width:160px" filter="true"
 							filterMatchMode="startsWith"
-							rendered="#{!practiseController.isSingleItemInEntityList()}">
+							rendered="#{!practiseController.isSingleItemInEntityList()}"
+							disabled="#{practiseController.getIsEntityListEnabled()}"
+							>
 
 							<!--  <f:selectItem itemLabel="Choose entity" itemValue="#{null}" /> -->
 
