entty disabled fix

--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -114,7 +114,7 @@
 							effect="fade" style="width:160px" filter="true"
 							filterMatchMode="startsWith"
 							rendered="#{!practiseController.isSingleItemInEntityList()}"
-							disabled="#{practiseController.getIsEntityListEnabled()}"
+							disabled="#{practiseController.isEntityListEnabled}"
 							>
 
 							<!--  <f:selectItem itemLabel="Choose entity" itemValue="#{null}" /> -->
