--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -167,7 +167,7 @@ function createClicked(args,dialogName){
 								panelStyle="width:180px" effect="fade" style="width:160px"
 								filter="true" filterMatchMode="startsWith"
 								rendered="#{userController.shouldshowEntity}"
-								disabled="#{userController.getIsEntityListEnabled()}"
+								disabled="#{userController.getIsEntityListDisabled()}"
 								>
 
 								<!-- var="t" converter="entityConverter" -->
