--- a/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
+++ b/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
@@ -28,7 +28,7 @@
 				
 				 <h:form id="mainForm"> 
     
-				    <p:dataTable value="#{payerController.payerList}" var="payer" >
+				    <p:dataTable value="#{payerController.payers}" var="payer" >
 
 						<p:column headerText="Payer Name">
 							#{payer.name}
