--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -69,15 +69,30 @@
 						
 						<p:column headerText="Status">
 							#{transaction.parStatus}
-						</p:column>
+						</p:column>						
 						
-						<p:column headerText="Edit"
-						 width="80"
-						 rendered="#{transactionController.canEdit()}"
-						 >
+						<p:column headerText="Edit" width="80"
+							rendered="#{transactionController.canEdit()}">
 							<p:commandButton icon="ui-icon-pencil" update=":myForm"
-								oncomplete="PF('Dlg1').show();" 
-								 action="#{transactionController.updateClicked(transaction)}" />
+								oncomplete="PF('Dlg1').show();"
+								action="#{transactionController.updateClicked(transaction)}" />
+
+							<p:commandButton icon="ui-icon-close" update=":mainForm"
+								resetValues="true"
+								action="#{transactionController.removeClicked(transaction)}">
+
+								<p:confirm header="Confirmation" message="Are you sure?"
+									icon="ui-icon-alert" />
+							</p:commandButton>
+
+							<p:confirmDialog global="true" showEffect="fade"
+								hideEffect="fade">
+								<p:commandButton value="Yes" type="button"
+									styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+								<p:commandButton value="No" type="button"
+									styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+							</p:confirmDialog>
+
 						</p:column>
 		
 					</p:dataTable>
