Entity Users fixes

--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -4,6 +4,11 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
+
+<f:metadata>
+<f:viewAction actionListener="#{transactionController.onLoad()}"/>
+</f:metadata>
+
 </h:head>
 
 <h:body>
