--- a/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
+++ b/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
@@ -60,8 +60,8 @@
 								actionListener="#{entityController.deleteEntityClicked(entity)}"
 								update=":entityTable">
 
-								<!-- <p:confirm header="Confirmation" message="Are you sure?"
-									icon="ui-icon-alert" /> -->
+								 <p:confirm header="Confirmation" message="Are you sure?"
+									icon="ui-icon-alert" />
 							</p:commandButton>
 							<p:confirmDialog global="true" showEffect="fade"
 								hideEffect="fade">
