Crash fix when use isnt logged in and email validation added

--- a/src/main/webapp/Views/Secured/Dashboard/Dashboard.xhtml
+++ b/src/main/webapp/Views/Secured/Dashboard/Dashboard.xhtml
@@ -14,12 +14,11 @@
         </ui:define>
 
 			<ui:define name="mainContent">
-				<h2>Welcome to dashboard</h2>
+				<h2>ParTracker from Sypore</h2>
 			</ui:define>
 		</ui:composition>
 	</h:body>
-
-
+	
 </h:body>
 
 
