--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -117,7 +117,7 @@
 							#{transaction.practice.name}
 						</p:column>	 -->				
 						
-						<p:column headerText="Status">
+						<p:column headerText="Status" filterMatchMode="startsWith" filterBy="#{transaction.parStatus}">
 							#{transaction.parStatus}
 						</p:column>
 		
