--- a/src/main/webapp/Views/Template/Footer.xhtml
+++ b/src/main/webapp/Views/Template/Footer.xhtml
@@ -3,14 +3,22 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
+
 </h:head>
 
 <h:body>
 
 	<ui:composition>
+		<style>
+#divMain {
+	min-height: 370px;
+	
+}
+</style>
 
-		<!-- <div style="text-align:center;margin:10px;">(c) 2015. Sypore, LLC</div> -->
-		
+		<div style="text-align: center;font-family:arial;font-size:14px; margin: 10px;">© 2016.
+			Partracker. Powered By Sypore, LLC</div>
+
 	</ui:composition>
 
 </h:body>
