--- a/src/main/webapp/Views/Unsecured/Login/index.xhtml
+++ b/src/main/webapp/Views/Unsecured/Login/index.xhtml
@@ -26,8 +26,8 @@ form ul {
 
 
 	<p:growl widgetVar="growl" showDetail="false" />
-	<h2 class="c" style="text-align: center; margin: 10% auto 2%;">SIGN
-		IN</h2>
+	<h2  style="text-align: center; margin: 10% auto 2%;">ParTracker</h2>
+ 	<!-- class="c" -->
 	<b:well styleClass="c">
 		<h:form class="form-signin">
 
@@ -54,7 +54,10 @@ form ul {
 
 	</b:well>
 	<!-- <h1>#{loginController.getName()}</h1> -->
-
+	
+<div style="text-align: center;font-family:arial;font-size:14px; margin: 10px;">© 2016.
+			Partracker. Powered By <h:graphicImage value="/Images/Sypore_Logo.jpg" width="150" style=" margin:0 auto;"  />
+			</div>
 </h:body>
 
 
