--- a/src/main/webapp/Views/Secured/Dashboard/Dashboard.xhtml
+++ b/src/main/webapp/Views/Secured/Dashboard/Dashboard.xhtml
@@ -14,7 +14,7 @@
         </ui:define>
 
 			<ui:define name="mainContent">
-				<h2>ParTracker from Sypore</h2>
+				<!-- <h2>ParTracker from Sypore</h2> -->
 			</ui:define>
 		</ui:composition>
 	</h:body>
