--- a/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
@@ -104,7 +104,11 @@
 				        
 				        <!-- <h:outputLabel for="status" value="Select Status:" /> -->
 			        	<p:selectOneMenu value="#{reportsController.currentPayerStatus}" style="width:175px">
-			        		<f:selectItem itemLabel="Select Status" />
+			        	
+			        	<f:selectItem itemLabel="Select Status" />
+			        	<f:selectItems value="#{reportsController.statusList}" var="v"
+			        	itemLabel="#{v}" itemValue="#{v}"/>
+			        		<!-- 
 				            <f:selectItem itemLabel="PAR" itemValue="PAR" />
 				            <f:selectItem itemLabel="Non-Par" itemValue="Non-Par" />
 				            <f:selectItem itemLabel="Application Package Complete" itemValue="Application Package Complete" />
@@ -112,7 +116,7 @@
 				            <f:selectItem itemLabel="Application Accepted" itemValue="Application Accepted" />
 				            <f:selectItem itemLabel="Application Rejected" itemValue="Application Rejected" />
 				            <f:selectItem itemLabel="Effective Date Assigned" itemValue="Effective Date Assigned" />
-				            <f:selectItem itemLabel="Letter Received" itemValue="Letter Received" />
+				            <f:selectItem itemLabel="Letter Received" itemValue="Letter Received" /> -->
 				        </p:selectOneMenu>
 				        
 					
