Project name changed and email is commente for now

--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -232,11 +232,11 @@ function createClicked(args,dialogName){
 						</h:panelGrid>
 						<!-- </p:column> -->
 
-						<h:panelGrid columns="2" cellpadding="8">
+						<!-- <h:panelGrid columns="2" cellpadding="8">
 							<h:outputText value="Send Email: " />
 							<p:selectBooleanCheckbox value="#{userController.sendEmail}" />
 
-						</h:panelGrid>
+						</h:panelGrid> -->
 					</p:panelGrid>
 
 					<br />
