--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -32,9 +32,9 @@
 								<f:selectItems value="#{reportsController.providerList}" var="entity"
 									itemLabel="#{entity.firstName} #{entity.lastName}" itemValue="#{entity}"  />
 	
-								<!-- <p:column>
+								 <p:column>
 									<h:outputText value="#{t.firstName} #{t.lastName}" />
-								</p:column> -->
+								</p:column>
 							</p:selectOneMenu> 
 							
 							
