--- a/src/main/webapp/Views/Template/Footer.xhtml
+++ b/src/main/webapp/Views/Template/Footer.xhtml
@@ -17,7 +17,7 @@
 </style>
 
 		<div style="text-align: center;font-family:arial;font-size:14px; margin: 10px;">© 2016.
-			Partracker. Powered By Sypore, LLC</div>
+			ParTracker. Powered By Sypore, LLC</div>
 
 	</ui:composition>
 
