--- a/src/main/webapp/Views/Unsecured/Login/index.xhtml
+++ b/src/main/webapp/Views/Unsecured/Login/index.xhtml
@@ -56,7 +56,7 @@ form ul {
 	<!-- <h1>#{loginController.getName()}</h1> -->
 	
 <div style="text-align: center;font-family:arial;font-size:14px; margin: 10px;">© 2016.
-			Partracker. Powered By <h:graphicImage value="/Images/Sypore_Logo.jpg" width="150" style=" margin:0 auto;"  />
+			ParTracker. Powered By <h:graphicImage value="/Images/Sypore_Logo.jpg" width="150" style=" margin:0 auto;"  />
 			</div>
 </h:body>
 
